<resources>
    <string name="app_name">Grocery List</string>
    <string name="item_name_qty">Item Name, Qty</string>
    <string name="before_mm_dd_yyyy">Before: MM/DD/YYYY</string>
    <string name="default_price">$0.00</string>
    <string name="user_name">User Name</string>
    <string name="add">Add</string>
    <string name="app_logo">App Logo</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_task">Add Task</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_the_name_for_your_new_list">" Enter the name for your new list!"</string>
    <string name="list_name">List Name</string>
    <string name="new_list_form">New List Form</string>
    <string name="item_name">Item Name</string>
    <string name="home_logout">Home | Logout</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="quantity_0">Quantity: 0</string>
    <string name="buy_before_mm_dd_yyyy">Buy Before: MM/DD/YYYY</string>
    <string name="total_cost_0_00">Total Cost: $0.00</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="total_cost">Total Cost</string>
    <string name="buy_before_date">Buy Before Date</string>
    <string name="edit_item">Edit Item</string>
    <string name="add_item">Add Item</string>
    <string name="create_new_list">Create a New List</string>
    <string name="enter_a_list_token">Join a List</string>
    <string name="help">Help</string>
    <string name="themes">Themes</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="pick_date">Pick Date</string>
    <string name="grocery_list_token">Grocery List Token</string>
    <string name="your_nickname">Your Nickname</string>
    <string name="sign_in">Sign In</string>
    <string name="list_login">List Login</string>
    <string name="nickname_rules">\t\tMust be at least 3 characters\n\t\tMust be no more than 9 characters</string>
    <string name="nickname">Nickname</string>
</resources>