<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tokenActivity"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    style="@style/activity"
    tools:context=".TokenActivity">

    <TextView
        style="@style/title"
        android:text="@string/list_login"
        android:layout_weight=".5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".15">

        <EditText
            android:id="@+id/token_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/grocery_list_token"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="@color/text"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".15">

        <EditText
            android:id="@+id/user_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_nickname"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="@color/text"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname_rules"
            android:textColor="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/back_button"
            style="@style/buttons"
            android:text="@string/back" />

        <Button
            android:id="@+id/list_sign_in_button"
            style="@style/buttons"
            android:text="@string/sign_in" />
    </LinearLayout>

</LinearLayout>