<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listLogin"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    style="@style/activity"
    tools:context=".ListLoginActivity">

    <TextView
        style="@style/title"
        android:text="@string/app_name"
        android:layout_weight=".1"/>

    <ImageView
        android:layout_weight=".4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:maxHeight="75dp"
        android:src="@drawable/grocery_list_app_2_app_main_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/create_new_list_button"
            style="@style/buttons"
            android:text="@string/create_new_list" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".3">
        <Button
            android:id="@+id/enter_token_button"
            style="@style/buttons"
            android:text="@string/enter_a_list_token" />
    </LinearLayout>

</LinearLayout>