<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="45dp"
    android:layout_marginVertical="20dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_weight=".25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:maxWidth="120dp"
            android:maxHeight="120dp"
            android:contentDescription="@string/app_logo"
            android:paddingHorizontal="10dp"
            tools:srcCompat="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/title"
            style="@style/subtitle"
            android:paddingHorizontal="10dp"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_weight=".25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <EditText

            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_EMAIL_ADDRESS"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            android:textSize="@dimen/button_text_size"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="AUTOFILL_HINT_PASSWORD"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginBottom="24dp"
            android:padding="16dp"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:layout_weight=".25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <Button
            android:id="@+id/loginButton"
            style="@style/buttons"
            android:text="@string/login"
            android:textSize="@dimen/button_text_size"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/registerButton"
            style="@style/buttons"
            android:text="@string/register"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>

</LinearLayout>