<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addItem"
    style="@style/activity"
    tools:context=".AddItemActivity">

    <FrameLayout
        android:id="@+id/top_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:name="com.example.grocerylist.TopNavBar" />

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        style="@style/subtitle"
        android:text="@string/add_item"
        android:layout_weight=".1"/>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">
        <EditText
            android:id="@+id/add_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:hint="@string/item_name"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_item_date_button"
                style="@style/buttons"
                android:layout_width="wrap_content"
                android:maxHeight="48dp"
                android:text="@string/pick_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/barrier"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.59" />

            <TextView
                android:id="@+id/add_item_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_before_date"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="@dimen/emphasize_text"
                android:textColor="@color/text"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            style="@style/hline"
            android:background="@color/text"
            android:layout_marginHorizontal="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">
        <EditText
            android:id="@+id/add_item_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:hint="@string/item_quantity"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight=".1">
        <EditText
            android:id="@+id/add_item_total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:hint="@string/total_cost"
            android:textAlignment="center"
            android:minHeight="48dp"
            android:textColor="@color/text"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight=".1">
        <Button
            android:id="@+id/save_added_item_button"
            android:text="@string/save"
            style="@style/buttons"/>

        <FrameLayout
            android:id="@+id/navigation_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:name="com.example.grocerylist.NavigationFragment" />
    </LinearLayout>

</LinearLayout>